--- a/pom.xml
+++ b/pom.xml
@@ -503,6 +503,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${maven.jetty.version}</version>
                 <configuration>
+                    <contextPath>/</contextPath>
                     <scanIntervalSeconds>${jetty.scanIntervalSeconds}</scanIntervalSeconds>
                     <stopKey>stop-jetty</stopKey>
                     <stopPort>9999</stopPort>
