Replaced http://tatami.ippon.fr URL to https://tatami.ippon.fr

--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -1,6 +1,6 @@
 # tatami.version can (should) be used to version static resources and thus enable a long cache value.
 tatami.version=1.0-SNAPSHOT
-tatami.url=http://tatami.ippon.fr
+tatami.url=https://tatami.ippon.fr
 
 #User configuration
 tatami.admin.users=tatami@ippon.fr
