--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
                 <log4j.loglevel>WARN</log4j.loglevel>
                 <tatami.version>${project.version}</tatami.version>
-                <tatami.url>http://tatami.ippon.fr</tatami.url>
+                <tatami.url>https://tatami.ippon.fr</tatami.url>
                 <tatami.ldapauth.url>ldap://directory:389/dc=ippon,dc=fr</tatami.ldapauth.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
                 <tatami.smtp.port>25</tatami.smtp.port>
@@ -118,7 +118,7 @@
                 <jetty.scanIntervalSeconds>0</jetty.scanIntervalSeconds>
                 <log4j.loglevel>WARN</log4j.loglevel>
                 <tatami.version>${project.version}</tatami.version>
-                <tatami.url>http://tatami.ippon.fr</tatami.url>
+                <tatami.url>https://tatami.ippon.fr</tatami.url>
                 <tatami.smtp.host>mail.ippon.fr</tatami.smtp.host>
                 <tatami.smtp.port>25</tatami.smtp.port>
                 <tatami.smtp.user></tatami.smtp.user>
