--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -10,7 +10,7 @@ tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
 tatami.ldapauth.domain=ippon.fr
-tatami.ldapauth.url=${tatami.ldapauth.url}
+tatami.ldapauth.url=ldap://directory:389/dc=ippon,dc=fr
 
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
