--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,9 @@
                 <tatami.google.analytics.key></tatami.google.analytics.key>
                 <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
-                <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
+                <tatami.search.engine>lucene</tatami.search.engine>
                 <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
-                <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
-                <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
             </properties>
         </profile>
         <profile>
@@ -74,11 +72,9 @@
                 <tatami.google.analytics.key></tatami.google.analytics.key>
                 <tatami.wro4j.enabled>true</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>false</tatami.message.reloading.enabled>
-                <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
+                <tatami.search.engine>lucene</tatami.search.engine>
                 <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
-                <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
-                <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
             </properties>
             <build>
                 <plugins>
@@ -128,11 +124,9 @@
                 <tatami.google.analytics.key>UA-10959780-3</tatami.google.analytics.key>
                 <tatami.wro4j.enabled>true</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>false</tatami.message.reloading.enabled>
-                <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
+                <tatami.search.engine>lucene</tatami.search.engine>
                 <tatami.lucene.path.data>/opt/tatami/data/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
-                <tatami.elasticsearch.path.data>/opt/tatami/data/elasticsearch</tatami.elasticsearch.path.data>
-                <tatami.elasticsearch.path.log>/opt/tatami/log/elasticsearch</tatami.elasticsearch.path.log>
             </properties>
             <build>
                 <plugins>
@@ -182,11 +176,9 @@
                 <tatami.google.analytics.key></tatami.google.analytics.key>
                 <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
-                <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
+                <tatami.search.engine>lucene</tatami.search.engine>
                 <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
-                <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
-                <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
             </properties>
             <build>
                 <testResources>
@@ -389,7 +381,7 @@
         <spring.version>3.1.2.RELEASE</spring.version>
         <spring.security.version>3.1.2.RELEASE</spring.security.version>
         <spring.social.version>1.0.1.RELEASE</spring.social.version>
-        <elasticsearch.version>0.19.8</elasticsearch.version>
+        <elasticsearch.version>0.19.9</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.5.8</slf4j.version>
         <httpclient.core.version>4.1</httpclient.core.version>
