StackOverflowError fixed when running tests...

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -33,7 +33,7 @@ cassandra.keyspace=tatami
 # administration page
 
 #Search engine configuration (could be either 'lucene' or 'elasticsearch')
-tatami.search.engine=${tatami.search.engine}
+search.engine=${tatami.search.engine}
 
 #Elastic Search configuration
 elasticsearch.indexName=tatami
