--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -18,7 +18,7 @@ cassandra.cluster=Tatami cluster
 cassandra.keyspace=tatami
 
 #Search engine configuration (could be either 'lucene' or 'elasticsearch')
-tatami.search.engine=${tatami.search.engine}
+tatami.search.engine.implementation=${tatami.search.engine}
 
 #Elastic Search configuration
 elasticsearch.indexName=tatami
