First very basic version with Atmosphere !!

--- a/pom.xml
+++ b/pom.xml
@@ -426,6 +426,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.atmosphere</groupId>
+            <artifactId>atmosphere-spring</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.geronimo.javamail</groupId>
             <artifactId>geronimo-javamail_1.4_mail</artifactId>
             <version>1.8.2</version>
