--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -6,6 +6,8 @@ tatami.url=${tatami.url}
 tatami.wro4j.enabled=${tatami.wro4j.enabled}
 tatami.google.analytics.key=${tatami.google.analytics.key}
 tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
+# Spring Security channel security, see http://static.springsource.org/spring-security/site/docs/3.1.x/reference/ns-config.html#ns-requires-channel
+tatami.connection.security=${tatami.connection.security}
 
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
