--- a/pom.xml
+++ b/pom.xml
@@ -360,7 +360,8 @@
                 <dependency>
                     <groupId>org.apache.directory.server</groupId>
                     <artifactId>apacheds-all</artifactId>
-                    <version>1.5.5</version> <!-- Don't change this version ! It breaks the code -->
+                    <version>1.5.5</version>
+                    <!-- Don't change this version ! It breaks the code -->
                     <scope>test</scope>
                     <exclusions>
                         <exclusion>
@@ -379,7 +380,7 @@
         <java.version>1.6</java.version>
 
         <!-- Dependencies -->
-        <spring.version>3.1.3.RELEASE</spring.version>
+        <spring.version>3.2.0.RELEASE</spring.version>
         <spring.security.version>3.1.3.RELEASE</spring.security.version>
         <spring.social.version>1.0.1.RELEASE</spring.social.version>
         <elasticsearch.version>0.19.10</elasticsearch.version>
@@ -390,12 +391,11 @@
         <hector.mapper.version>3.0-04</hector.mapper.version>
         <persistence.api.version>1.0.2</persistence.api.version>
         <javax.inject.version>1</javax.inject.version>
-        <cglib.version>2.2.2</cglib.version>
         <javax.servlet.api.version>3.0.1</javax.servlet.api.version>
         <javax.validation.api.version>1.0.0.GA</javax.validation.api.version>
         <hibernate.validator.version>4.3.0.Final</hibernate.validator.version>
         <jstl.version>1.2</jstl.version>
-        <jackson.version>1.9.5</jackson.version>
+        <jackson.version>2.1.2</jackson.version>
         <jodatime.version>2.1</jodatime.version>
         <commons.lang.version>2.6</commons.lang.version>
         <commons.io.version>2.3</commons.io.version>
@@ -508,11 +508,6 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>${cglib.version}</version>
-        </dependency>
-        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet.api.version}</version>
@@ -548,13 +543,18 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-json-org</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hppc</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
@@ -565,6 +565,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
             <version>${spring.version}</version>
         </dependency>
         <dependency>
